--- a/index.html
+++ b/index.html
@@ -91,18 +91,27 @@
       <img class="img-fluid" src="imagenes/guitarra-electrica-hagstrom-2-microfonos-hagstrom-custom-62-black-burst.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <a href="pages/guitarras.html">
+        <button class="button-85" role="button">Ir a la Tienda</button>
+      </a>
     </div>
 
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="imagenes/guitarra-electrica-hagstrom-retroscape-condor-color-cherry-sunburst.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <a href="pages/guitarras.html">
+        <button class="button-85" role="button">Ir a la Tienda</button>
+      </a>
     </div>
 
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="imagenes/guitarra-electrica-hagstrom-hl500-color-natural-mahogany-gloss.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <a href="pages/guitarras.html">
+        <button class="button-85" role="button">Ir a la Tienda</button>
+      </a>
     </div>
 
   </div>
