--- a/pages/guitarras.html
+++ b/pages/guitarras.html
@@ -51,18 +51,21 @@
       <img class="img-fluid" src="../imagenes/guitarra-electroacustica-breedlove-con-corte-y-equalizador-dsc11-ce.png"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
 
     <div class="cardsGuitarra">
       <img class="img-fluid" src="../imagenes/guitarra-electroacustica-breedlove-con-corte-y-equalizador-dsn21ceo.png"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
 
     <div class="cardsGuitarra">
       <img class="img-fluid" src="../imagenes/guitarra-electroacustica-breedlove-con-equalizador-y-corte-src39ce.png"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
   </div>
 
@@ -74,36 +77,42 @@
       <img class="img-fluid" src="../imagenes/guitarra-electrica-eko-strato-black.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
 
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="../imagenes/guitarra-electrica-hagstrom-fantomen-con-estuche-rigido-color-tobaco-sunburst.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
 
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="../imagenes/guitarra-electrica-sx-ee-series-ee3-bk.png"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>
 
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="../imagenes/guitarra-electrica-sx-ef-series-ef3-cs.png"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>      
     </div> 
     
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="../imagenes/guitarra-electroclasica-yamaha-silent-guitar-slg200ntbl.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div> 
     
     <div class="cardsGuitarraElectrica">
       <img class="img-fluid" src="../imagenes/guitarra-electrica-prs-se-custom-24-faded-blue-burst.jpg"
         alt="guitarra-electroacustica-breedlove">
       <p>Guitarra electroacustica Breedlove</p>
+      <button class="button-85" role="button">Comprar</button>
     </div>  
   </div>
 
